
2006-07-14  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* mailto: links were not handled as mailto: links if protocol was present in link

2006-07-13 Karsten Dambekalns <karsten@typo3.org>

	* EM: Fixed bug #3299 (Language pack installation cannot handle spaces in filenames).
	* EM: Added extra sanity check when cleaning up version numbers in constraints, solves bogus warnings when installing extensions.
	* EM: The label for enabling unreviewed extensions is more clear now. The search scope (all/reviewed) is shown on the import extensions page.

2006-07-12  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fix bug #3600: config.formMailCharset is not honoured
	* t3lib_formmail: do charset conversion for mails when config.formMailCharset is set or config.metaCharset different from config.renderCharset
	* t3lib_formmail: use $this->messageid of base class 

2006-07-12 Dmitry Dulepov <typo3@accio.lv>

	* Fixed bug #3594: No lang resolution for title in <tx_templavoila> element

2006-07-11  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* t3lib_cs: trim the charset for normalization

2006-07-11 Dmitry Dulepov <typo3@accio.lv>

	* Fixed bug: missing check for PHP version in t3lib_div::getUrl()

2006-07-10  Ernesto Baschny <ernst@cron-it.de>

	* Fixed bug #3005: captionSplit.cObject functionality in IMGTEXT is back as documented. But marked as "deprecated".
	* Fixed bug #3258: rendering issues in CSS styled IMGTEXT with noRows setting fixed.
	* Fixed bug #3416: first caption was being doubled with "renderMethod=table".

2006-07-10 Dmitry Dulepov <typo3@accio.lv>

	* Bug: "Publish time" label appeared where "Unpublish time" should appear

2006-07-07  Karsten Dambekalns  <karsten@typo3.org>

	* Added background color to TYPO3 error pages.

2006-07-07  Michael Stucki  <michael@typo3.org>

	* Changed version numbers in t3lib/config_default.php
	* Minor corrections to CVSreadme.txt
	* Install Tool displayed TYPO3_version instead of TYPO3_branch