@@ -1,4 +1,3 @@
-
 2006-07-14  Martin Kutschker  <martin.t.kutschker@blackbox.net>
 
 	* mailto: links were not handled as mailto: links if protocol was present in link
@@ -8,6 +7,14 @@
 	* EM: Fixed bug #3299 (Language pack installation cannot handle spaces in filenames).
 	* EM: Added extra sanity check when cleaning up version numbers in constraints, solves bogus warnings when installing extensions.
 	* EM: The label for enabling unreviewed extensions is more clear now. The search scope (all/reviewed) is shown on the import extensions page.
+
+2006-07-13 Wolfgang Klinger <wk@plan2.net>
+
+	* Fixing some missing is_array checks
+
+2006-07-12 Wolfgang Klinger <wk@plan2.net>
+
+	* Fix bug/feature request #3811: Adding "ATagParams" to GMENU
 
 2006-07-12  Martin Kutschker  <martin.t.kutschker@blackbox.net>
 
